[package]
name = "libsurvex"
version = "0.0.1"
edition = "2021"
description = "A library for reading and writing Survex files"
license = "MIT"

[lib]
name = "libsurvex"

[features]
default =["mnemo"]
mnemo = ["libmnemo"]
debug = []

[dependencies.libmnemo]
path = "../libmnemo"
version = "0.0.1"
optional = true

[dependencies]
csv ={ version = "*" }
lazy_static = "1.4.0"